Fix spacing issue

--- a/src/stages/AuctionQueue/AuctionQueue.scss
+++ b/src/stages/AuctionQueue/AuctionQueue.scss
@@ -51,8 +51,8 @@
 
 .hiringboard-respond {
   @media screen and (min-width: 1200px) {
-    min-width: 80%;
-    max-width: 80%;
+    min-width: 90%;
+    max-width: 90%;
   }
 }
 
@@ -95,7 +95,7 @@
   min-height: 70vh;
   max-height: 70vh;
   overflow-y: scroll;
-  padding: 40px;
+  padding: 32px;
   max-width: 58%;
   min-width: 58%;
   
@@ -114,7 +114,7 @@
   border-radius: 4px;
   overflow-y: scroll;
   margin-top: 24px;
-  padding: 40px;
+  padding: 32px;
   width: 95%;
   
   p {
@@ -144,7 +144,7 @@
   border-radius: 4px;
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 32px;
   width: 95%;
 
   p {
@@ -273,8 +273,6 @@ button.consultation-button:disabled {
 .open-bounty-buttons-container {
   align-items: center;
   display: flex;
-  height: 40px;
-  margin-top: 20px;
 
   button:first-child {
     margin-right: 12px;
